modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb modified:   14. Defining Classes/Modifiers and Access Levels.ipynb modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -573,7 +573,7 @@
     }
    },
    "source": [
-    "**Classes** in $C\\#$ are declared by an optional **access modifier**, followed by the keyword `class`, followed by an **identifier** (`class` **name**), along with a set of **data members** and **methods**, each of which are provided within a *code block*:"
+    "**Classes** in $C\\#$ are declared by optional **access modifiers**, followed by the keyword `class`, followed by an **identifier** (`class` **name**), along with a set of **data members** and **methods**, each of which are provided within a *code block*:"
    ]
   },
   {
@@ -589,7 +589,7 @@
    },
    "source": [
     "```c#\n",
-    "[access_modifier] class ClassName\n",
+    "[access_modifiers] class ClassName\n",
     "{ // Begin code block\n",
     "\n",
     "\n",
