--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -127,7 +127,7 @@
    },
    "source": [
     "```c#\n",
-    "[ access_modifier ] class className\n",
+    "[access_modifiers] class className\n",
     "```"
    ]
   },
