--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -302,7 +302,7 @@
    },
    "source": [
     "```c#\n",
-    "[access_modifier] class className\n",
+    "[access_modifiers] class className\n",
     "```"
    ]
   },
@@ -500,7 +500,7 @@
    },
    "source": [
     "```c#\n",
-    "[access_modifier] fieldType fieldName \n",
+    "[access_modifiers] fieldType fieldName \n",
     "```"
    ]
   },
@@ -671,7 +671,7 @@
    },
    "source": [
     "```c#\n",
-    "[access_modifier] fieldType fieldName = initial_value;\n",
+    "[access_modifiers] fieldType fieldName = initial_value;\n",
     "```"
    ]
   },
@@ -780,19 +780,73 @@
    },
    "source": [
     "```c#\n",
-    "// Property definiiton\n",
+    "// Property definiitons\n",
     "public string Sauce\n",
     "{\n",
-    "    get\n",
-    "    {\n",
-    "        return this.sauce;\n",
-    "    }\n",
+    "    get { return this.sauce; }\n",
+    "    set { this.sauce = value; }\n",
+    "}\n",
     "\n",
-    "    set\n",
-    "    {\n",
-    "        this.sauce = value;\n",
-    "    }\n",
+    "public string Cheese\n",
+    "{\n",
+    "    get { return this.cheese; }\n",
+    "    set { this.cheese = value; }\n",
+    "}\n",
+    "\n",
+    "public string Toppings\n",
+    "{\n",
+    "    get { return this.toppings; }\n",
+    "    set { this.toppings = value; }\n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that we may generalize the declaration of a **property** as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifiers] propertyType propertyName\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The main objective of the **properties** is to ensure the **encapsulation of the state of the class** in which they are declared, i.e. to protect the class from falling into invalid state.   \n",
+    "\n",
+    "**Encapsulation** is **hiding of the physical representation** of data in one class so that if we subsequently change this presentation, it will not reflect on other classes which interact with it."
    ]
   },
   {
