modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -828,8 +828,23 @@
    },
    "source": [
     "```c#\n",
-    "[access_modifiers] propertyType propertyName\n",
+    "[access_modifiers] propertyType PropertyName\n",
     "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Also note, however, that unlike with the declaration of field names, **property names** are conventionaly written in **Pascal Case**."
    ]
   },
   {
@@ -859,7 +874,7 @@
     }
    },
    "source": [
-    "##### Using Properties to Facilitate Encupsulation"
+    "##### Use Properties to Facilitate Encupsulation"
    ]
   },
   {
