modified:   14. Defining Classes/Modifiers and Access Levels.ipynb modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/Modifiers and Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers and Access Levels.ipynb
@@ -158,7 +158,22 @@
     }
    },
    "source": [
-    "### Access Level `public`"
+    "### Access Levels"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Access Level `public`"
    ]
   },
   {
@@ -397,7 +412,7 @@
     }
    },
    "source": [
-    "### Access Level `internal`"
+    "#### Access Level `internal`"
    ]
   },
   {
@@ -630,7 +645,7 @@
     }
    },
    "source": [
-    "### Access Level `private`"
+    "#### Access Level `private`"
    ]
   },
   {
@@ -813,61 +828,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
      }
     ]
    }
