modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -959,7 +959,7 @@
     "```c#\n",
     "get \n",
     "{ \n",
-    "    // accessor instructions go here \n",
+    "    return this.fieldName\n",
     "}\n",
     "```"
    ]
@@ -976,9 +976,87 @@
     }
    },
    "source": [
-    "The method of **reading the value of a property** must end with a `return` or `throw` operation.   \n",
-    "   \n",
-    "The type of the value, which is returned as a result of this method, has to be the same as the `propertyType` described in the property declaration."
+    "The method of **reading the value of a property** must end with a `return` or `throw` operation. The type of the value, which is returned as a result of this method, has to be the same as the `propertyType` described in the property declaration."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Method for Modifying Property’s Value (Setter)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can also declare a method of **changing (modifying) the value of a property**. It is declared in the body of a property with `void` return value, and the **assigned value** is accessible through an implicit parameter **value**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "set \n",
+    "{ \n",
+    "    this.fieldName = value\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "It declares the actions that must be performed in order to **change the value of the property**. The method uses a **hidden parameter** called `value`, which is available in $C\\#$ by default, and contains the **new value of the property**. The type of the value parameter must be the same as the type of the property."
    ]
   },
   {
