modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -976,7 +976,7 @@
     }
    },
    "source": [
-    "The method of **reading the value of a property** must end with a `return` or `throw` operation. The type of the value, which is returned as a result of this method, has to be the same as the `propertyType` described in the property declaration."
+    "The method of **reading the value of a property** must end with a `return` or `throw` operation. The type of the value, which is returned as a result of this method must be the same as the `propertyType` described in the property declaration."
    ]
   },
   {
