--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -1508,7 +1508,7 @@
    "source": [
     "Pizza margherita = new Pizza(\n",
     "    \"Marinara\",\n",
-    "    \"Mozarella\",\n",
+    "    \"Mozzarella\",\n",
     "    \"Fresh Basil, Sliced Tomato\"\n",
     ");"
    ]
