modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -1205,6 +1205,23 @@
     }
    },
    "source": [
+    "1. **Read-only**, i.e. these properties have only a `get` method.\n",
+    "2. **Write-only**, i.e. these properties have only a `set` method, but no method for reading the value of the property.\n",
+    "3.  **read-write**, which is the most common case, where the property has methods **both** for reading and for changing the value."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<br>"
    ]
   },
