renamed:    14. Defining Classes/Modifiers and Access Levels.ipynb -> 14. Defining Classes/Access Levels and Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Modifiers.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## Modifiers and Access Levels\n",
+    "## Access Levels and Modifiers\n",
     "---"
    ]
   },
@@ -43,7 +43,22 @@
     }
    },
    "source": [
-    "In $C\\#$ there are **four access modifiers**: \n",
+    "### Access Levels"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In $C\\#$ there are **four access-level modifiers**: \n",
     "1. `public` \n",
     "2. `private` \n",
     "3. `protected`\n",
@@ -77,7 +92,7 @@
     }
    },
    "source": [
-    "The **access modifiers** can be used with the following `class` elements: \n",
+    "The **access-level modifiers** can be used with the following `class` elements: \n",
     "- `class` declaration\n",
     "- fields\n",
     "- properties\n",
@@ -144,21 +159,6 @@
    },
    "source": [
     "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "### Access Levels"
    ]
   },
   {
