modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -60,9 +60,9 @@
    "source": [
     "In $C\\#$ there are **four access-level modifiers**: \n",
     "1. `public` \n",
-    "2. `private` \n",
+    "2. `internal`    \n",
     "3. `protected`\n",
-    "4. `internal`    "
+    "4. `private` "
    ]
   },
   {
@@ -93,7 +93,7 @@
    },
    "source": [
     "The **access-level modifiers** can be used with the following `class` elements: \n",
-    "- `class` declaration\n",
+    "- declaration\n",
     "- fields\n",
     "- properties\n",
     "- methods"
@@ -173,7 +173,7 @@
     }
    },
    "source": [
-    "#### Access Level `public`"
+    "#### `public`"
    ]
   },
   {
@@ -412,7 +412,7 @@
     }
    },
    "source": [
-    "#### Access Level `internal`"
+    "#### `internal`"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "    }\n",
     "    //-------------------------------------------------------------\n",
     "\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -645,7 +645,232 @@
     }
    },
    "source": [
-    "#### Access Level `private`"
+    "#### `protected`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The `protected` keyword is used for the members of a class, rather than the class itself."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If a member of the class uses the `protected` accessibility level, then anything inside of the class can use it, as well as any derived class. It’s a little broader than `private`, but still more restrictive than `public`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's suppose we have declared the following `Polygon` `class`: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Polygon\n",
+    "{\n",
+    "    \n",
+    "    // Initialized Field Definition \n",
+    "    protected int numberOfSides = 3;\n",
+    "\n",
+    "\n",
+    "    // Property Definition\n",
+    "    protected int NumberOfSides \n",
+    "    { \n",
+    "        get{ return this.numberOfSides; }\n",
+    "        set{ this.numberOfSides = value; }\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Default Constructor\n",
+    "    public Polygon( )\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Polygon( int numberOfSides )\n",
+    "    {\n",
+    "        this.numberOfSides = numberOfSides;\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "A `protected` member of a base class is accessible in a derived class only if the access occurs through the derived class type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(28,42): error CS1540: Cannot access protected member 'Polygon.NumberOfSides' via a qualifier of type 'Polygon'; the qualifier must be of type 'Rectangle' (or derived from it)",
+     "output_type": "error",
+     "traceback": [
+      "(28,42): error CS1540: Cannot access protected member 'Polygon.NumberOfSides' via a qualifier of type 'Polygon'; the qualifier must be of type 'Rectangle' (or derived from it)"
+     ]
+    }
+   ],
+   "source": [
+    "// This Square class is inherited from the Polygon Base class  \n",
+    "public class Rectangle : Polygon\n",
+    "{\n",
+    "    public Rectangle()\n",
+    "    {\n",
+    "        // Overload of the NumberOfSides Property \n",
+    "        // which was inherited from the base class\n",
+    "        this.NumberOfSides = 4;\n",
+    "    }\n",
+    "\n",
+    "    public void RectangleVsTriangle()\n",
+    "    {\n",
+    "\n",
+    "        Rectangle rectangle =  new Rectangle();\n",
+    "        Polygon   triangle  =  new Polygon(3);\n",
+    "\n",
+    "\n",
+    "        // This works fine since Rectangle is derived from Polygon\n",
+    "        Console.WriteLine(\n",
+    "            $\"A Rectangle has: { rectangle.NumberOfSides } sides\"\n",
+    "        );\n",
+    "\n",
+    "\n",
+    "        // This results in an error since, while inside the Rectangle class,\n",
+    "        // the NumberOfSides Property can only be accessed by\n",
+    "        // class members which are derived from Rectangle\n",
+    "        Console.WriteLine(\n",
+    "            $\"A Triangle has: { triangle.NumberOfSides } sides\"\n",
+    "        );\n",
+    "\n",
+    "    } \n",
+    "} "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `private`"
    ]
   },
   {
@@ -699,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -781,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -828,72 +1053,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
