modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -809,7 +809,7 @@
     }
    ],
    "source": [
-    "// This Square class is inherited from the Polygon Base class  \n",
+    "// This Rectangle class is inherited from the Polygon Base class  \n",
     "public class Rectangle : Polygon\n",
     "{\n",
     "    public Rectangle()\n",
