--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -1040,6 +1040,130 @@
     "\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The `sealed` Modifier"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "There may come a time where you want to **prevent a class from being inherited**. This might happen if you want to ensure that no one derives anything from a specific class.   \n",
+    "   \n",
+    "You can use the `sealed` keyword to make it so nothing can inherit from a specific class by adding it to your class definition right after specifying the optional access level and before the `class` keyword, as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public sealed class Bird\n",
+    "{\n",
+    "    // Automatic Property Definition\n",
+    "    public int WingSpan { get; set; }\n",
+    "\n",
+    "    // Default Constructor\n",
+    "    public Bird()\n",
+    "    {\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,23): error CS0509: 'Parrot': cannot derive from sealed type 'Bird'",
+     "output_type": "error",
+     "traceback": [
+      "(1,23): error CS0509: 'Parrot': cannot derive from sealed type 'Bird'"
+     ]
+    }
+   ],
+   "source": [
+    "public class Parrot : Bird\n",
+    "{\n",
+    "    void FeedMePlease()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Polly wants a cracker!\");\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
