modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -173,7 +173,7 @@
     }
    },
    "source": [
-    "#### `public`"
+    "#### The `public` Access Level"
    ]
   },
   {
@@ -412,7 +412,7 @@
     }
    },
    "source": [
-    "#### `internal`"
+    "#### The `internal` Access Level"
    ]
   },
   {
@@ -645,7 +645,7 @@
     }
    },
    "source": [
-    "#### `protected`"
+    "#### The `protected` Access Level"
    ]
   },
   {
@@ -870,7 +870,7 @@
     }
    },
    "source": [
-    "#### `private`"
+    "#### The `private` Access Level"
    ]
   },
   {
