modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -1222,7 +1222,7 @@
     }
    },
    "source": [
-    "A class can be **split across multiple files or sections** using the `partial` keyword:"
+    "A class can be **split across multiple files or sections** using the `partial` keyword by adding it to your class definition right after specifying the optional access level and before the `class` keyword, as shown below:"
    ]
   },
   {
